# token-spend-consolidator

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  plan.example.json  pyproject.toml
.claude/: settings.json
.claude/hooks/: run-tests.sh
display/swiftbar/: tokenspend.5m.py
docs/: BLUEPRINT.md
docs/plans/: recalibrate-max20x.md
docs/research/: steering-practices.md
for_claude/: HANDOFF.md
gitignored-data/: README.md
scripts/: calibrate_quota.py  refresh_pricing.py
src/tokenspend/: __init__.py  __main__.py  cli.py  consolidate.py  model.py  plan.py  quota.py  state.py  valuation.py
src/tokenspend/collectors/: __init__.py  anthropic_api_usage.py  claude_code_log.py  registry.py
src/tokenspend/pricing/: __init__.py  anthropic_prices.json  litellm_prices.json  overrides.json
tests/: test_api_collector.py  test_plan.py  test_quota.py  test_state.py  test_valuation.py
